--- a/index.html
+++ b/index.html
@@ -897,7 +897,8 @@
             <td>10 分鐘</td>
             <td>
                 由負責操作的同學打開「官方組」與「民間組」兩本 NotebookLM，
-                兩邊輪流簡短說明前一節課整理出的重點內容，讓全組有共同的基本理解。
+                兩邊輪流簡短說明前一節課在步驟三整理出的重點內容，讓全組有共同的基本理解。
+                提醒:若資料沒有留存，請重複步驟三重新對NotebookLM提問後，輪流閱讀。
             </td>
         </tr>
         <tr>
@@ -952,7 +953,7 @@
                 </div>
 
                <div class="feedback-content">
-                    <p>請參考官方/民間的第1.2題貼文，整理出官方資料和民間資料中，對這個主題「說法很相似或方向一致」的<strong>2–3 個共同點</strong>。</p>
+                    <p>請參考官方/民間的第1.2題NotebookLM提問，整理出官方資料和民間資料中，對這個主題「說法很相似或方向一致」的<strong>2–3 個共同點</strong>。</p>
                     <div class="example-box">
                         <strong>【範例】</strong><br>
                         1️⃣ 官方和民間都認為：「這個議題和國中生的生活有關」。<br>
@@ -969,7 +970,7 @@
                     <button class="copy-btn copy-question" onclick="copyQuestion('2. ⚔️ 官方 vs 民間的差異')">📋 複製標題</button>
                 </div>
                 <div class="feedback-content">
-                    <p>請比較官方/民間的第3題貼文，寫出官方資料和民間資料之間<strong>最明顯不同的 2–3 點</strong>，可以是立場、關注對象、解決方法或用的數據不同。</p>
+                    <p>請比較官方/民間的第3題NotebookLM提問，寫出官方資料和民間資料之間<strong>最明顯不同的 2–3 點</strong>，可以是立場、關注對象、解決方法或用的數據不同。</p>
                     <div class="example-box">
                         <strong>【範例】</strong><br>
                         1️⃣ 官方強調「政策的長期好處」，民間比較在意「短期的生活壓力」。<br>
@@ -986,7 +987,7 @@
                     <button class="copy-btn copy-question" onclick="copyQuestion('3. 🧭 我們在 NotebookLM 的研究方向中想研究哪些')">📋 複製標題</button>
                 </div>
                 <div class="feedback-content">
-                    <p>請根據官方/民間的第4題的內容，全組一起決定<strong>接下來最想研究的 2–3 個方向</strong>，用條列方式寫出來。</p>
+                    <p>請根據官方/民間的第4題的NotebookLM提問，全組一起決定<strong>接下來最想研究的 2–3 個方向</strong>，用條列方式寫出來。</p>
                     <div class="example-box">
                         <strong>【範例】</strong><br>
                         1️⃣ 想了解「家長」對這個政策的真正想法。<br>
